# ezAutoPC

./: .gitignore  README.md  autopc.py  config.json  main.py  pyproject.toml
autopc/: __init__.py  autopc.py  config.py  mcp.py  plugins.py  prompts.py  skills.py  tools.py  utils.py
autopc/api/: event.py  sender.py
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.vue  main.ts
dashboard/src/assets/fonts/: fonts.css
dashboard/src/components/: ChatCard.vue
dashboard/src/composables/: useChatSocket.ts
dashboard/src/router/: About.vue  Home.vue  index.ts
dashboard/src/router/Chat/: Chat.vue
dashboard/src/router/Login/: Login.vue
dashboard/src/router/Setting/: AutoPC.vue  Setting.vue  Webui.vue
dashboard/src/router/UpdateConfig/: UpdateConfig.vue
dashboard/src/stores/: config.ts  pages.ts
dashboard/src/utils/: apiFetch.ts  fetch.ts  notification.ts  type.ts
plugins/test/: main.py
