[project]
name = "testclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "glib>=1.0.0",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pillow>=12.1.1",
    "pyautogui>=0.9.54",
    "pyreadline3>=3.5.4",
    "pywayland>=0.4.18",
]
